syntax = "proto3";

package cache;

import "google/protobuf/struct.proto";

option go_package = "github.com/keloran/distcache/proto/cache";

// CacheService handles inter-cache communication between nodes
service CacheService {
  // Broadcast returns information about this cache node
  rpc Broadcast(BroadcastRequest) returns (BroadcastResponse);

  // HealthCheck checks if a peer is healthy
  rpc HealthCheck(HealthCheckRequest) returns (HealthCheckResponse);

  // SetCache replicates a cache entry from a peer
  rpc SetCache(SetCacheRequest) returns (SetCacheResponse);

  // GetCache retrieves a cache entry
  rpc GetCache(GetCacheRequest) returns (GetCacheResponse);

  // SyncCache returns all cache entries for synchronization
  rpc SyncCache(SyncCacheRequest) returns (SyncCacheResponse);
}

message BroadcastRequest {
  // Caller info for mutual registration
  string caller_name = 1;
  string caller_address = 2;
  string caller_version = 3;
}

message BroadcastResponse {
  string name = 1;
  string address = 2;
  string version = 3;
}

message HealthCheckRequest {}

message HealthCheckResponse {
  bool healthy = 1;
  int32 peer_count = 2;
  int32 healthy_peer_count = 3;
}

message SetCacheRequest {
  string key = 1;
  google.protobuf.Value value = 2;
  int64 timestamp_unix_nano = 3;
  bool from_replication = 4; // true if this is a replication from another node (don't re-replicate)
  repeated string replicated_to = 5; // addresses that have already received this replication
}

message SetCacheResponse {
  bool success = 1;
  string error = 2;
}

message GetCacheRequest {
  string key = 1;
}

message GetCacheResponse {
  bool found = 1;
  repeated CacheEntry entries = 2;
}

message CacheEntry {
  google.protobuf.Value value = 1;
  int64 timestamp_unix_nano = 2;
}

message SyncCacheRequest {}

message SyncCacheResponse {
  repeated SyncCacheEntry entries = 1;
  int32 total_keys = 2;
  int32 total_entries = 3;
}

message SyncCacheEntry {
  string key = 1;
  repeated CacheEntry values = 2;
}